munin (CVS)

  * Main: Yet another rewrite of munin-limits open call (SF#1115434).
  * Main: Make sure all rrd-tunes are correct after an upgrade (Deb#296454,
    Deb#296645).
  * Node: munin-node didn't treat default_plugin_user properly (Deb#295366).
  * Plugins: linux/if* now treats ra* interfaces as wireless.
  * Plugins: minor bugfix in generic/bind9.
  * Plugins: generic/sendmail_mailqueue handles bigger queues (fix by Mickey
    Everts).
  * Plugins: Made contrib-plugins generic/amavis and generic/mailstats more
    secure.
  * Plugins: Minor bugfix in linux/if_, with info fields.
  * Plugins: Added warning note in linux/if_ output.
  * Plugins: generic/smart_ exit value no longer triggers criticals.
  * Plugins: linux/df* now ignores bind mounts.
  * Plugins: Added plugin generic/snmp__cpuload.
  * Plugins: generic/amavis now has configurable logfile location (Deb#296533).
  * Plugins: linux/irqstats should no longer fail on some systems (Deb#296452).
  * Plugins: modified graph_args of generic/apache_processes, to work around 
    an rrdtool bug (Deb#296528).
  * Docs: Added man page for munin-node-configure-snmp.
  * Docs: Brushed up the comments in the default munin.conf a bit (Deb#294060).
  * Installation: Create CIGdir if nonexistant.

munin (1.3.1)

  * Main: Fix bug with calculation of "Avg:" field when using graph_sums.
  * Main: Make munin-limits work properly with perl <5.8 (SF#1109039).
  * Main: Bugfix in munin-cgi-graph with hostnames including - (SF#1111510).
  * Main: Added category_order, to complete the *_order options.
  * Main/Node: Added support for TLS.
  * Plugin: linux/users now has proper hashbang.
  * Plugin: Bugfix in generic/sendmail_mail* autoconf.
  * Plugin: Changed default log for generic/postfix_mailstats from syslog to
    mail.log. Downgraded it from auto to manual. (Deb#291720).
  * Plugin: Made generic/amavis autodetect logtail format (Deb#284638, 
    Deb#288395).